compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Shell/content/Controllers/Home/HomeController.cs.pp
namespace $rootnamespace$.Controllers.Home
{
    using System.Web.Mvc;

    public partial class HomeController : Controller
    {
        partial void IndexLoaded();

        [AllowAnonymous]
        public ActionResult Index()
        {
            IndexLoaded();
            
            return this.View();
        }
    }
}
